Aggiunto il modulo char_utilities
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@5 500a5620-302c-0410-bb8c-d54761bbe776

--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libsim_base.la
-libsim_base_la_SOURCES = datetime_class.f90 err_handling.f90 file_utilities.f90 \
- geo_coord_class.f90 \
+libsim_base_la_SOURCES = char_utilities.f90 datetime_class.f90 err_handling.f90 \
+ file_utilities.f90 geo_coord_class.f90 \
  io_units.f90 kinds.f90 missing_values.f90 phys_const.f90
 
 include_HEADERS = $(libsim_base_la_SOURCES:.o=.mod)
