--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -12,7 +12,7 @@ AM_FCFLAGS = -I../base
 libsim_vol7d_la_LIBADD = ../base/libsim_base.la
 noinst_HEADERS = vol7d_class_get_vol.F90 vol7d_class_remap.F90 \
  vol7d_class_merge_final.F90
-include_HEADERS = $(libsim_vol7d_la_SOURCES:.f90=.mod)
+nodist_include_HEADERS = $(libsim_vol7d_la_SOURCES:.f90=.mod)
 
 #vol7d_ana_class.$(OBJEXT):
 vol7d_class.$(OBJEXT): vol7d_utilities.$(OBJEXT) vol7d_ana_class.$(OBJEXT) \
