--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -4,6 +4,10 @@ if ORSIM
 bin_PROGRAMS += esempio_v7doracle esempio_v7doracle_multi
 endif
 
+if SHP
+bin_PROGRAMS += esempio_geo_coordvect
+endif
+
 LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la
 
 AM_FCFLAGS = -I../base -I../vol7d
@@ -17,4 +21,9 @@ esempio_v7doracle_LDADD = $(LDADD) $(liboraclesim)
 
 esempio_v7doracle_multi_SOURCES = esempio_v7doracle_multi.f90
 esempio_v7doracle_multi_LDADD = $(LDADD) $(liboraclesim)
+endif
+
+if SHP
+esempio_geo_coordvect_SOURCES = esempio_geo_coordvect.f90
+esempio_geo_coordvect_LDADD = $(LDADD) $(liboraclesim)
 endif
