Aggiunta la directory grib e il relativo esempio
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@29 500a5620-302c-0410-bb8c-d54761bbe776

--- a/grib/Makefile.am
+++ b/grib/Makefile.am
@@ -1,12 +1,15 @@
 lib_LTLIBRARIES = libsim_grib.la
-libsim_grib_la_SOURCES = geo_grid.f90 grib_io.f90 \ #impgrib.f90
- grib_grid.f90 matchgrib.f90
+libsim_grib_la_SOURCES = geo_grid_class.f90 grib_io_class.f90 grib_grid_class.f90 matchgrib_class.f90
+#impgrib.f90
+
 #libsim_grib_la_FFLAGS = -I../base
-AM_FFLAGS = -I../base
-libsim_grib_la_LDADD = ../base/libsim_base.la
+AM_FCFLAGS = -I../base
+libsim_grib_la_LIBADD = ../base/libsim_base.la
 
-nodist_include_HEADERS = $(libsim_grib_la_SOURCES:.o=.mod)
+nodist_include_HEADERS = $(libsim_grib_la_SOURCES:.f90=.mod)
 
-grib_grid.$(OBJEXT): geo_grid.$(OBJEXT) grib_io.$(OBJEXT)
-grib_io.$(OBJEXT): matchgrib_class.$(OBJEXT)
+grib_grid_class.$(OBJEXT): geo_grid_class.$(OBJEXT) grib_io_class.$(OBJEXT)
+grib_grid_class.lo: geo_grid_class.$(OBJEXT) grib_io_class.$(OBJEXT)
+grib_io_class.$(OBJEXT): matchgrib_class.$(OBJEXT)
+grib_io_class.lo: matchgrib_class.$(OBJEXT)
 
