Modifiche libreria oracle
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@37 500a5620-302c-0410-bb8c-d54761bbe776

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -8,25 +8,26 @@ if SHP
 bin_PROGRAMS += esempio_geo_coordvect
 endif
 
-LDADD = ../base/libsim_base.la ../grib/libsim_grib.la ../vol7d/libsim_vol7d.la
+#LDADD = ../base/libsim_base.la ../grib/libsim_grib.la ../vol7d/libsim_vol7d.la
 
 AM_FCFLAGS = -I../base -I../grib -I../vol7d
 
 esempio_v7d_SOURCES = esempio_v7d.f90
-esempio_v7d_LDADD = $(LDADD) $(liboraclesim)
+esempio_v7d_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la $(liboraclesim)
 
 esempio_regrib_SOURCES = esempio_regrib.f90
-esempio_regrib_LDADD = $(LDADD) -lemos
+#esempio_regrib_LDADD = $(LDADD) -lemos  $(liboraclesim)
+esempio_regrib_LDADD = ../base/libsim_base.la ../grib/libsim_grib.la -lemos
 
 if ORSIM
 esempio_v7doracle_SOURCES = esempio_v7doracle.f90
-esempio_v7doracle_LDADD = $(LDADD) $(liboraclesim)
+esempio_v7doracle_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la $(liboraclesim)
 
 esempio_v7doracle_multi_SOURCES = esempio_v7doracle_multi.f90
-esempio_v7doracle_multi_LDADD = $(LDADD) $(liboraclesim)
+esempio_v7doracle_multi_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la $(liboraclesim)
 endif
 
 if SHP
 esempio_geo_coordvect_SOURCES = esempio_geo_coordvect.f90
-esempio_geo_coordvect_LDADD = $(LDADD) $(liboraclesim)
+esempio_geo_coordvect_LDADD =  ../base/libsim_base.la ../vol7d/libsim_vol7d.la $(liboraclesim)
 endif
