Aggiornato alla versione 1.1, aggiunto lo file spec per creare gli rpm e sistemati alcuni problemi di installazione
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@51 500a5620-302c-0410-bb8c-d54761bbe776

--- a/grib/Makefile.am
+++ b/grib/Makefile.am
@@ -6,7 +6,9 @@ libsim_grib_la_SOURCES = geo_grid_class.f90 grib_io_class.f90 grib_grid_class.f9
 AM_FCFLAGS = -I../base
 libsim_grib_la_LIBADD = ../base/libsim_base.la
 
-nodist_include_HEADERS = $(libsim_grib_la_SOURCES:.f90=.mod)
+# c'e` una maniera migliore?
+tmpvar = $(libsim_grib_la_SOURCES:.f90=.mod)
+nodist_include_HEADERS = $(tmpvar:.F90=.mod)
 
 grib_grid_class.$(OBJEXT): geo_grid_class.$(OBJEXT) grib_io_class.$(OBJEXT)
 grib_grid_class.lo: geo_grid_class.$(OBJEXT) grib_io_class.$(OBJEXT)
