Aggiunta l'interfaccia per importare da DbAlle
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@61 500a5620-302c-0410-bb8c-d54761bbe776

--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -6,6 +6,9 @@ libsim_vol7d_la_SOURCES = vol7d_ana_class.F90 vol7d_class.F90 \
 if ORSIM
 libsim_vol7d_la_SOURCES += vol7d_oraclesim_class.f90
 endif
+if DBALLE
+libsim_vol7d_la_SOURCES += vol7d_dballe_class.f90
+endif
 
 #libsim_vol7d_la_FFLAGS = -I../base
 AM_FCFLAGS = -I../base
@@ -15,6 +18,7 @@ noinst_HEADERS = vol7d_class_get_vol.F90 vol7d_class_remap.F90 \
 # c'e` una maniera migliore?
 tmpvar = $(libsim_vol7d_la_SOURCES:.f90=.mod)
 nodist_include_HEADERS = $(tmpvar:.F90=.mod)
+
 
 #vol7d_ana_class.$(OBJEXT):
 vol7d_class.$(OBJEXT): vol7d_utilities.$(OBJEXT) vol7d_ana_class.$(OBJEXT) \
@@ -31,6 +35,12 @@ if ORSIM
 vol7d_oraclesim_class.$(OBJEXT): vol7d_class.$(OBJEXT) vol7d_utilities.$(OBJEXT)
 vol7d_oraclesim_class.lo: vol7d_class.$(OBJEXT) vol7d_utilities.$(OBJEXT)
 endif
+
+if DBALLE
+vol7d_dballe_class.$(OBJEXT): vol7d_class.$(OBJEXT) vol7d_utilities.$(OBJEXT)
+vol7d_dballe_class.lo: vol7d_class.$(OBJEXT) vol7d_utilities.$(OBJEXT)
+endif
+
 #vol7d_timerange_class.$(OBJEXT):
 #vol7d_utilities.$(OBJEXT):
 #vol7d_utilities_orig.$(OBJEXT):
