Aggiunto il modulo vol7d_class_cumulate che fornisce alla classe vol7d dei semplici metodi di elaborazione, per ora solo la ricumulazione di dati reali su un intervallo specificato
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@68 500a5620-302c-0410-bb8c-d54761bbe776

--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -2,7 +2,7 @@ lib_LTLIBRARIES = libsim_vol7d.la
 libsim_vol7d_la_SOURCES = vol7d_ana_class.F90 vol7d_class.F90 \
  vol7d_level_class.F90 vol7d_network_class.F90 \
  vol7d_timerange_class.F90 vol7d_utilities.F90 \
- vol7d_var_class.f90 vol7d_varvect_class.f90
+ vol7d_var_class.f90 vol7d_varvect_class.f90 vol7d_class_compute.F90
 if ORSIM
 libsim_vol7d_la_SOURCES += vol7d_oraclesim_class.f90
 endif
@@ -20,6 +20,8 @@ tmpvar = $(libsim_vol7d_la_SOURCES:.f90=.mod)
 nodist_include_HEADERS = $(tmpvar:.F90=.mod)
 
 
+vol7d_class_compute.$(OBJEXT): vol7d_class.$(OBJEXT)
+vol7d_class_compute.lo: vol7d_class.$(OBJEXT)
 #vol7d_ana_class.$(OBJEXT):
 vol7d_class.$(OBJEXT): vol7d_utilities.$(OBJEXT) vol7d_ana_class.$(OBJEXT) \
  vol7d_timerange_class.$(OBJEXT) vol7d_level_class.$(OBJEXT) \
