--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,5 +1,5 @@
 if ORSIM
 dist_pkgdata_DATA = simana_011.txt simana_012.txt simana_013.txt simana_015.txt \
  simana_017.txt simana_018.txt simana_019.txt simana_020.txt simana_021.txt \
- simana_022.txt varmap.csv
+ simana_022.txt varmap.csv polipciv4.dat
 endif
