Revisione generale delle classi geo_grid e grib_io, geo_grid e` stata spostata in base, grib_io e` stata integrata meglio nel resto della libreria e geo_grid_grib e` stata rinominata e modificata di conseguenza.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@71 500a5620-302c-0410-bb8c-d54761bbe776

--- a/grib/Makefile.am
+++ b/grib/Makefile.am
@@ -1,5 +1,5 @@
 lib_LTLIBRARIES = libsim_grib.la
-libsim_grib_la_SOURCES = geo_grid_class.f90 grib_io_class.f90 grib_grid_class.f90 matchgrib_class.f90
+libsim_grib_la_SOURCES = grib_io_class.f90 geo_grid_grib.f90 matchgrib_class.f90
 #impgrib.f90
 
 #libsim_grib_la_FFLAGS = -I../base
@@ -10,8 +10,8 @@ libsim_grib_la_LIBADD = ../base/libsim_base.la
 tmpvar = $(libsim_grib_la_SOURCES:.f90=.mod)
 nodist_include_HEADERS = $(tmpvar:.F90=.mod)
 
-grib_grid_class.$(OBJEXT): geo_grid_class.$(OBJEXT) grib_io_class.$(OBJEXT)
-grib_grid_class.lo: geo_grid_class.$(OBJEXT) grib_io_class.$(OBJEXT)
+geo_grid_grib.$(OBJEXT): grib_io_class.$(OBJEXT)
+geo_grid_grib.lo: grib_io_class.$(OBJEXT)
 grib_io_class.$(OBJEXT): matchgrib_class.$(OBJEXT)
 grib_io_class.lo: matchgrib_class.$(OBJEXT)
 
