--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -1,6 +1,6 @@
 lib_LTLIBRARIES = libsim_base.la
 libsim_base_la_SOURCES = char_utilities.f90 datetime_class.f90 err_handling.f90 \
- file_utilities.f90 geo_coord_class.F90 \
+ file_utilities.f90 geo_coord_class.F90 geo_grid_class.f90 \
  io_units.f90 kinds.f90 missing_values.f90 phys_const.f90
 
 # c'e` una maniera migliore?
@@ -15,6 +15,8 @@ file_utilities.$(OBJEXT): err_handling.$(OBJEXT)
 file_utilities.lo: err_handling.$(OBJEXT)
 geo_coord_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) phys_const.$(OBJEXT)
 geo_coord_class.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT) phys_const.$(OBJEXT)
+geo_grid_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) char_utilities.$(OBJEXT) err_handling.$(OBJEXT)
+geo_grid_class.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT) char_utilities.$(OBJEXT) err_handling.$(OBJEXT)
 missing_values.$(OBJEXT): kinds.$(OBJEXT)
 missing_values.lo: kinds.$(OBJEXT)
 
