commit temporaneo; problemi con le multireti
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@74 500a5620-302c-0410-bb8c-d54761bbe776

--- a/qc/Makefile.am
+++ b/qc/Makefile.am
@@ -10,8 +10,8 @@ tmpvar = $(libsim_qc_la_SOURCES:.f90=.mod)
 nodist_include_HEADERS = $(tmpvar:.F90=.mod)
 
 
-modqc.$(OBJEXT): modqc.$(OBJEXT) 
-modqc.lo: modqc.$(OBJEXT) 
+#modqc.$(OBJEXT): modqc.$(OBJEXT) 
+#modqc.lo: modqc.$(OBJEXT) 
 
 
 
