Aggiunti i file *.mod al target clean
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@75 500a5620-302c-0410-bb8c-d54761bbe776

--- a/grib/Makefile.am
+++ b/grib/Makefile.am
@@ -15,3 +15,6 @@ geo_grid_grib.lo: grib_io_class.$(OBJEXT)
 grib_io_class.$(OBJEXT): matchgrib_class.$(OBJEXT)
 grib_io_class.lo: matchgrib_class.$(OBJEXT)
 
+mostlyclean-compile:
+	-rm -f *.$(OBJEXT) *.mod
+
