Prima versione funzionante del controllo di qualita'
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@122 500a5620-302c-0410-bb8c-d54761bbe776

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 EXTRA_DIST = libsim.spec
 
 # Execute make in subdirs
-SUBDIRS = base grib vol7d examples data qc termolib
+SUBDIRS = base grib vol7d data qc termolib examples
 
