--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -5,7 +5,7 @@ bin_PROGRAMS += esempio_v7doracle esempio_v7doracle_multi
 endif
 
 if DBALLE
-bin_PROGRAMS += esempio_v7ddballe esempio_v7ddballe_multi esempio_v7ddballe_import_export
+bin_PROGRAMS += esempio_v7ddballe esempio_v7ddballe_multi esempio_v7ddballe_import_export esempio_qccli
 endif
 
 if SHP
@@ -14,7 +14,7 @@ endif
 
 #LDADD = ../base/libsim_base.la ../grib/libsim_grib.la ../vol7d/libsim_vol7d.la
 
-AM_FCFLAGS = -I../base -I../grib -I../vol7d
+AM_FCFLAGS = -I../base -I../grib -I../vol7d -I../qc
 
 esempio_v7d_SOURCES = esempio_v7d.f90
 esempio_v7d_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la $(liboraclesim) $(libdballe)
@@ -25,6 +25,7 @@ esempio_regrib_LDADD = ../base/libsim_base.la ../grib/libsim_grib.la -lemos
 
 esempio_qc_convert_SOURCES = esempio_qc_convert.f90
 esempio_qc_convert_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la $(liboraclesim) $(libdballe)
+
 
 if ORSIM
 esempio_v7doracle_SOURCES = esempio_v7doracle.f90
@@ -43,6 +44,10 @@ esempio_v7ddballe_multi_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la 
 
 esempio_v7ddballe_import_export_SOURCES = esempio_v7ddballe_import_export.f90
 esempio_v7ddballe_import_export_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la $(liboraclesim) $(libdballe)
+
+esempio_qccli_SOURCES = esempio_qccli.f90
+esempio_qccli_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../qc/libsim_qc.la $(liboraclesim) $(libdballe)
+
 endif
 
 if SHP
