--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 EXTRA_DIST = libsim.spec
 
 # Execute make in subdirs
-SUBDIRS = base grib vol7d data qc termolib examples
+SUBDIRS = base grib vol7d data qc termolib examples doc
 
