corretti e aggiunti esempi
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@160 500a5620-302c-0410-bb8c-d54761bbe776

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -5,7 +5,7 @@ bin_PROGRAMS += esempio_v7doracle esempio_v7doracle_multi
 endif
 
 if DBALLE
-bin_PROGRAMS += esempio_v7ddballe esempio_v7ddballe_multi esempio_v7ddballe_import_export esempio_qccli
+bin_PROGRAMS += esempio_v7ddballe esempio_v7ddballe_multi esempio_v7ddballe_import_export esempio_v7ddballe_export esempio_qccli 
 endif
 
 if SHP
@@ -46,6 +46,9 @@ esempio_v7ddballe_multi_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la 
 
 esempio_v7ddballe_import_export_SOURCES = esempio_v7ddballe_import_export.f90
 esempio_v7ddballe_import_export_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la $(liboraclesim) $(libdballe)
+
+esempio_v7ddballe_export_SOURCES = esempio_v7ddballe_export.f90
+esempio_v7ddballe_export_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la $(liboraclesim) $(libdballe)
 
 esempio_qccli_SOURCES = esempio_qccli.f90
 esempio_qccli_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../qc/libsim_qc.la $(liboraclesim) $(libdballe)
