inserita la gestione della descrizione e unita di misura nelle variabili Per ora la struttura viene riempita automaticamente solo nell'import da dballe
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@176 500a5620-302c-0410-bb8c-d54761bbe776

--- a/vol7d/Makefile.am
+++ b/vol7d/Makefile.am
@@ -17,7 +17,7 @@ noinst_HEADERS = vol7d_class_type_templ.F90 vol7d_class_desc_templ.F90 \
 vol7d_distinct.F90 vol7d_class_diff.F90 vol7d_class_diff_only.f90 \
 vol7d_dballe_class_nana.f90 vol7d_dballe_class_ndati.f90 \
 vol7d_dballe_class_dati.F90 vol7d_dballe_class_datiattr.F90 \
-vol7d_dballe_class_ana.F90 vol7d_dballe_class_anaattr.F90 
+vol7d_dballe_class_ana.F90 vol7d_dballe_class_anaattr.F90 vol7d_dballe_class_var_du.f90
 
 # c'e` una maniera migliore?
 tmpvar = $(libsim_vol7d_la_SOURCES:.f90=.mod)
@@ -46,13 +46,13 @@ if DBALLE
 vol7d_dballe_class.$(OBJEXT): vol7d_class.$(OBJEXT) vol7d_utilities.$(OBJEXT) \
 vol7d_dballe_class_nana.f90 vol7d_dballe_class_ndati.f90 \
 vol7d_dballe_class_dati.F90 vol7d_dballe_class_datiattr.F90 \
-vol7d_dballe_class_ana.F90 vol7d_dballe_class_anaattr.F90 
+vol7d_dballe_class_ana.F90 vol7d_dballe_class_anaattr.F90 vol7d_dballe_class_var_du.f90
 
 
 vol7d_dballe_class.lo: vol7d_class.$(OBJEXT) vol7d_utilities.$(OBJEXT) \
 vol7d_dballe_class_nana.f90 vol7d_dballe_class_ndati.f90 \
 vol7d_dballe_class_dati.F90 vol7d_dballe_class_datiattr.F90 \
-vol7d_dballe_class_ana.F90 vol7d_dballe_class_anaattr.F90 
+vol7d_dballe_class_ana.F90 vol7d_dballe_class_anaattr.F90  vol7d_dballe_class_var_du.f90
 AM_FCFLAGS += -I /usr/include/dballe
 endif
 
