--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,5 +1,23 @@
 if ORSIM
-dist_pkgdata_DATA = simana_011.txt simana_012.txt simana_013.txt simana_015.txt \
- simana_017.txt simana_018.txt simana_019.txt simana_020.txt simana_021.txt \
- simana_022.txt varmap.csv polipciv4.dat
+
+bin_SCRIPTS = libsim_gen_ana_ora.sh
+
+dist_pkgdata_DATA = varmap.csv polipciv4.dat
+
+dist_pkgdata_DATA += net_001.simana net_002.simana net_010.simana \
+ net_011.simana net_012.simana net_013.simana net_015.simana \
+ net_017.simana net_018.simana net_019.simana net_020.simana net_021.simana \
+ net_022.simana 
+
+
+# Per rigenerare l'anagrafica dal DB nel ramo di sviluppo:
+# rm -f *.simana
+# make
+%.simana:
+	./libsim_gen_ana_ora.sh $@
+
+# Decommentare la seguente se l'anagrafica non deve stare in SVN
+#CLEANFILES = *.simana
+
 endif
+
