Compilazione condizionale delle routine relative ai grib
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@195 500a5620-302c-0410-bb8c-d54761bbe776

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,8 @@
-noinst_PROGRAMS = esempio_v7d esempio_regrib esempio_qc_convert esempio_termolib
+noinst_PROGRAMS = esempio_v7d esempio_qc_convert esempio_termolib
+
+if GRIB
+noinst_PROGRAMS += esempio_regrib
+endif
 
 if ORSIM
 noinst_PROGRAMS += esempio_v7doracle esempio_v7doracle_multi
@@ -20,9 +24,11 @@ esempio_termolib_SOURCES  = esempio_termolib.f90
 esempio_v7d_SOURCES = esempio_v7d.f90
 esempio_v7d_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la $(liboraclesim) $(libdballe)
 
+if GRIB
 esempio_regrib_SOURCES = esempio_regrib.f90
 #esempio_regrib_LDADD = $(LDADD) -lemos  $(liboraclesim) $(libdballe)
 esempio_regrib_LDADD = ../base/libsim_base.la ../grib/libsim_grib.la -lemos
+endif
 
 esempio_qc_convert_SOURCES = esempio_qc_convert.f90
 esempio_qc_convert_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la $(liboraclesim) $(libdballe)
@@ -52,7 +58,6 @@ esempio_v7ddballe_export_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la
 
 esempio_qccli_SOURCES = esempio_qccli.f90
 esempio_qccli_LDADD = ../base/libsim_base.la ../vol7d/libsim_vol7d.la ../qc/libsim_qc.la $(liboraclesim) $(libdballe)
-
 endif
 
 if SHP
