--- a/grib/Makefile.am
+++ b/grib/Makefile.am
@@ -1,3 +1,4 @@
+if GRIB
 lib_LTLIBRARIES = libsim_grib.la
 libsim_grib_la_SOURCES = grib_io_class.f90 geo_grid_grib.f90 matchgrib_class.f90
 #impgrib.f90
@@ -14,6 +15,7 @@ geo_grid_grib.$(OBJEXT): grib_io_class.$(OBJEXT)
 geo_grid_grib.lo: grib_io_class.$(OBJEXT)
 grib_io_class.$(OBJEXT): matchgrib_class.$(OBJEXT)
 grib_io_class.lo: matchgrib_class.$(OBJEXT)
+endif
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT) *.mod
