Aggiunto estra_temp.dat alla lista di file da impacchettare
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@196 500a5620-302c-0410-bb8c-d54761bbe776

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -2,7 +2,7 @@ if ORSIM
 
 dist_bin_SCRIPTS = libsim_gen_ana_ora.sh
 
-dist_pkgdata_DATA = varmap.csv polipciv4.dat
+dist_pkgdata_DATA = varmap.csv polipciv4.dat estra_temp.dat
 
 dist_pkgdata_DATA += net_001.simana net_002.simana net_010.simana \
  net_011.simana net_012.simana net_013.simana net_015.simana \
