La tabella variabili varmap.csv ora puo` essere generata in maniera semiautomatica da libsim_gen_var_ora.sh a partire da un template incluso nella script stessa.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@202 500a5620-302c-0410-bb8c-d54761bbe776

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -1,6 +1,6 @@
 if ORSIM
 
-dist_bin_SCRIPTS = libsim_gen_ana_ora.sh
+dist_bin_SCRIPTS = libsim_gen_ana_ora.sh libsim_gen_var_ora.sh
 
 dist_pkgdata_DATA = varmap.csv polipciv4.dat estra_temp.dat
 
