Migliorata la specificazione delle dipendenze tra le librerie eliminando le dipendenze inutili; ora non e` piu` necessario specificare tutte le librerie a monte per linkare con le libsim_*.
git-svn-id: https://svn.smr.arpa.emr.it/vol7d/trunk@207 500a5620-302c-0410-bb8c-d54761bbe776

--- a/base/Makefile.am
+++ b/base/Makefile.am
@@ -3,6 +3,8 @@ libsim_base_la_SOURCES = char_utilities.f90 datetime_class.f90 err_handling.f90 
  file_utilities.f90 geo_coord_class.F90 geo_grid_class.f90 \
  io_units.f90 kinds.F90 missing_values.f90 phys_const.f90
 
+AM_LDFLAGS = $(libshp)
+
 # c'e` una maniera migliore?
 tmpvar = $(libsim_base_la_SOURCES:.f90=.mod)
 nodist_include_HEADERS = $(tmpvar:.F90=.mod)
@@ -19,6 +21,7 @@ geo_grid_class.$(OBJEXT): kinds.$(OBJEXT) missing_values.$(OBJEXT) char_utilitie
 geo_grid_class.lo: kinds.$(OBJEXT) missing_values.$(OBJEXT) char_utilities.$(OBJEXT) err_handling.$(OBJEXT)
 missing_values.$(OBJEXT): kinds.$(OBJEXT)
 missing_values.lo: kinds.$(OBJEXT)
+
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT) *.mod
