--- a/grib/Makefile.am
+++ b/grib/Makefile.am
@@ -1,10 +1,9 @@
 if GRIB
 lib_LTLIBRARIES = libsim_grib.la
 libsim_grib_la_SOURCES = grib_io_class.f90 geo_grid_grib.f90 matchgrib_class.f90
-#impgrib.f90
 
-#libsim_grib_la_FFLAGS = -I../base
 AM_FCFLAGS = -I../base
+AM_LDFLAGS = $(libgrib)
 libsim_grib_la_LIBADD = ../base/libsim_base.la
 
 # c'e` una maniera migliore?
@@ -16,6 +15,7 @@ geo_grid_grib.lo: grib_io_class.$(OBJEXT)
 grib_io_class.$(OBJEXT): matchgrib_class.$(OBJEXT)
 grib_io_class.lo: matchgrib_class.$(OBJEXT)
 endif
+
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT) *.mod
